{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 362,
  "lineage": "59021827-012d-d287-1a70-6fc1eac5342a",
  "resources": [
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "each": "map",
      "provider": "provider.google-beta",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "projects/ansible-terraform-282015/zones/us-west1-b/instanceGroups/terraform-webservers",
                "max_utilization": 0.8
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2020-07-04T11:45:42.494-07:00",
            "enable_cdn": false,
            "fingerprint": "nt8K1cKEeHw=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/ansible-terraform-282015/global/healthChecks/group-http-lb-hc-default"
            ],
            "id": "projects/ansible-terraform-282015/global/backendServices/group-http-lb-backend-default",
            "load_balancing_scheme": "EXTERNAL",
            "log_config": [
              {
                "enable": true,
                "sample_rate": 1
              }
            ],
            "name": "group-http-lb-backend-default",
            "port_name": "http",
            "project": "ansible-terraform-282015",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ansible-terraform-282015/global/backendServices/group-http-lb-backend-default",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_instance.vm_instance",
            "google_compute_instance_group.webservers",
            "google_compute_network.flask_network",
            "module.gce-lb-http.google_compute_health_check.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_http_https",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-07-04T11:45:01.707-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/ansible-terraform-282015/global/firewalls/flask-app-firewall",
            "name": "flask-app-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/ansible-terraform-282015/global/networks/flask-app-network",
            "priority": 1000,
            "project": "ansible-terraform-282015",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ansible-terraform-282015/global/firewalls/flask-app-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "flask-tcp"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.flask_network"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-hc",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-07-04T11:45:30.498-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/ansible-terraform-282015/global/firewalls/group-http-lb-hc-0",
            "name": "group-http-lb-hc-0",
            "network": "https://www.googleapis.com/compute/v1/projects/ansible-terraform-282015/global/networks/default",
            "priority": 1000,
            "project": "ansible-terraform-282015",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ansible-terraform-282015/global/firewalls/group-http-lb-hc-0",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_instance.vm_instance",
            "google_compute_instance_group.webservers",
            "google_compute_network.flask_network"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "35.241.25.177",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-07-04T11:44:18.687-07:00",
            "id": "projects/ansible-terraform-282015/global/addresses/group-http-lb-address",
            "name": "group-http-lb-address",
            "prefix_length": 0,
            "project": "ansible-terraform-282015",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ansible-terraform-282015/global/addresses/group-http-lb-address"
          }
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "projects/ansible-terraform-282015/global/forwardingRules/group-http-lb",
            "ip_address": "35.241.25.177",
            "ip_protocol": "TCP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "group-http-lb",
            "port_range": "80-80",
            "project": "ansible-terraform-282015",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ansible-terraform-282015/global/forwardingRules/group-http-lb",
            "target": "https://www.googleapis.com/compute/v1/projects/ansible-terraform-282015/global/targetHttpProxies/group-http-lb-http-proxy"
          },
          "dependencies": [
            "google_compute_instance.vm_instance",
            "google_compute_instance_group.webservers",
            "google_compute_network.flask_network",
            "module.gce-lb-http.google_compute_backend_service.default",
            "module.gce-lb-http.google_compute_global_address.default",
            "module.gce-lb-http.google_compute_health_check.default",
            "module.gce-lb-http.google_compute_target_http_proxy.default",
            "module.gce-lb-http.google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "https",
      "each": "list",
      "provider": "provider.google"
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20200701",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/ansible-terraform-282015/zones/us-west1-b/disks/terraform-instance-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/ansible-terraform-282015/zones/us-west1-b/instances/terraform-instance-0",
            "instance_id": "645058262733779136",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "tennisonyu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDVZffrSUS76BX9Y0xecaiLsmJbxBDtDUeG0s9+QgqGY6b2yiiTSlSZuE5fNATKwDcej8FstfcQyuu65v2eC54gl6nx7klrmJ7k+DhMluMa19ek+UO7NSbIs5PMYwiWdBfJ6cEgcNYPvtvQseNdstSdGFo0vrp8QrpGwy7jXZWm18GdAAJyP5kgi/jbSP3Pg9BbL2sQVIx6aiO9HbVdtobxzKkgJQohxkDVswbClaSRW1xO62z9jK2qUr8/Q/aXZLAkIh6wyM0huTh8sJ6QJlcN0H3f1omKrDPiSLIkJpYDS2NH7regrGXH5KXQvFKeTCW7Pgpc3VqU3zSvr29BGyygUUvNfVIRz/0a8nRwY1FijO9LFlWnQrUgytn0/IURkBamncWY4/G/PFBo0CPfMHtdphw1fxUG5D1AON+6Mu [...]
            },
            "metadata_fingerprint": "jqaQq2MsRuk=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install -yq build-essential python-pip rsync",
            "name": "terraform-instance-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.105.87.111",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/ansible-terraform-282015/global/networks/flask-app-network",
                "network_ip": "10.138.0.3",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/ansible-terraform-282015/regions/us-west1/subnetworks/flask-app-network",
                "subnetwork_project": "ansible-terraform-282015"
              }
            ],
            "project": "ansible-terraform-282015",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ansible-terraform-282015/zones/us-west1-b/instances/terraform-instance-0",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "flask-tcp"
            ],
            "tags_fingerprint": "jBGJIjAnPRI=",
            "zone": "us-west1-b"
          },
          "dependencies": [
            "google_compute_network.flask_network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20200701",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/ansible-terraform-282015/zones/us-west1-b/disks/terraform-instance-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/ansible-terraform-282015/zones/us-west1-b/instances/terraform-instance-1",
            "instance_id": "9157700369871892673",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "tennisonyu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDVZffrSUS76BX9Y0xecaiLsmJbxBDtDUeG0s9+QgqGY6b2yiiTSlSZuE5fNATKwDcej8FstfcQyuu65v2eC54gl6nx7klrmJ7k+DhMluMa19ek+UO7NSbIs5PMYwiWdBfJ6cEgcNYPvtvQseNdstSdGFo0vrp8QrpGwy7jXZWm18GdAAJyP5kgi/jbSP3Pg9BbL2sQVIx6aiO9HbVdtobxzKkgJQohxkDVswbClaSRW1xO62z9jK2qUr8/Q/aXZLAkIh6wyM0huTh8sJ6QJlcN0H3f1omKrDPiSLIkJpYDS2NH7regrGXH5KXQvFKeTCW7Pgpc3VqU3zSvr29BGyygUUvNfVIRz/0a8nRwY1FijO9LFlWnQrUgytn0/IURkBamncWY4/G/PFBo0CPfMHtdphw1fxUG5D1AON+6Mu [...]
            },
            "metadata_fingerprint": "jqaQq2MsRuk=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install -yq build-essential python-pip rsync",
            "name": "terraform-instance-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.83.14.195",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/ansible-terraform-282015/global/networks/flask-app-network",
                "network_ip": "10.138.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/ansible-terraform-282015/regions/us-west1/subnetworks/flask-app-network",
                "subnetwork_project": "ansible-terraform-282015"
              }
            ],
            "project": "ansible-terraform-282015",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ansible-terraform-282015/zones/us-west1-b/instances/terraform-instance-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "flask-tcp"
            ],
            "tags_fingerprint": "jBGJIjAnPRI=",
            "zone": "us-west1-b"
          },
          "dependencies": [
            "google_compute_network.flask_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "flask_network",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/ansible-terraform-282015/global/networks/flask-app-network",
            "name": "flask-app-network",
            "project": "ansible-terraform-282015",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ansible-terraform-282015/global/networks/flask-app-network"
          }
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-07-04T11:46:00.394-07:00",
            "id": "projects/ansible-terraform-282015/global/targetHttpProxies/group-http-lb-http-proxy",
            "name": "group-http-lb-http-proxy",
            "project": "ansible-terraform-282015",
            "proxy_id": 6535440007496036487,
            "self_link": "https://www.googleapis.com/compute/v1/projects/ansible-terraform-282015/global/targetHttpProxies/group-http-lb-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/ansible-terraform-282015/global/urlMaps/group-http-lb-url-map"
          },
          "dependencies": [
            "google_compute_instance.vm_instance",
            "google_compute_instance_group.webservers",
            "google_compute_network.flask_network",
            "module.gce-lb-http.google_compute_backend_service.default",
            "module.gce-lb-http.google_compute_health_check.default",
            "module.gce-lb-http.google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "default",
      "each": "list",
      "provider": "provider.google"
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-07-04T11:45:54.092-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/ansible-terraform-282015/global/backendServices/group-http-lb-backend-default",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "3HthR0f1i6o=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/ansible-terraform-282015/global/urlMaps/group-http-lb-url-map",
            "map_id": 3834237927176368269,
            "name": "group-http-lb-url-map",
            "path_matcher": [],
            "project": "ansible-terraform-282015",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ansible-terraform-282015/global/urlMaps/group-http-lb-url-map",
            "test": [],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_instance.vm_instance",
            "google_compute_instance_group.webservers",
            "google_compute_network.flask_network",
            "module.gce-lb-http.google_compute_backend_service.default",
            "module.gce-lb-http.google_compute_health_check.default"
          ]
        }
      ]
    }
  ]
}